@startuml
class User {
    +String name
    +String telephone
    +String email
    +String password
    +String role
    +register()
    +login()
    +logout()
    +bookCampground()
    +viewBookings()
    +editBooking()
    +deleteBooking()
}

class Campground {
    +String name
    +String address
    +String telephone
}

class Booking {
    +Date date
    +Integer duration
}

User "1" --> "0..*" Booking : makes
Campground "1" --> "0..*" Booking : reserved in
@enduml
